--- a/Registro/appsettings.json
+++ b/Registro/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VisitantesContext": "Server=DESKTOP-1KOT13L;Database=Visitantes;User ID=juan;Password=20030226;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
