--- a/Registro.BLL/Registro.BLL.csproj
+++ b/Registro.BLL/Registro.BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,12 +8,8 @@
 
   <ItemGroup>
     <Folder Include="Contracts\" />
-    <Folder Include="Core\" />
-    <Folder Include="Dtos\" />
-    <Folder Include="Models\" />
     <Folder Include="Validations\" />
     <Folder Include="Services\" />
-    <Folder Include="Responses\" />
   </ItemGroup>
 
 </Project>
