--- a/Registro.BLL/Registro.BLL.csproj
+++ b/Registro.BLL/Registro.BLL.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Validations\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Registro.DAL\Registro.DAL.csproj" />
   </ItemGroup>
 
 </Project>
