--- a/Registro/Registro.Web.csproj
+++ b/Registro/Registro.Web.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Registro.BLL\Registro.BLL.csproj" />
     <ProjectReference Include="..\Registro.DAL\Registro.DAL.csproj" />
   </ItemGroup>
 
