--- a/Registro/appsettings.json
+++ b/Registro/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VisitantesContext": "Server=DESKTOP-1KOT13L;Database=Visitantes;User ID=juan;Password=20030226;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VisitantesContext": "Server=ERIC;Database=Visitantes;User ID=visita;Password=visita123;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
